🖼  updated profile picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
     <link rel="shortcut icon" href="images/logo_lp_raw.png" type="image/x-icon">
     <title>Léo Poinet</title>
@@ -52,7 +52,7 @@
     <div class="main page-padding">
         <div class="container p-0 m-0">
             <div class="row align-items-center no-gutters">
-                <img class="col rounded-circle avatar-circle" src="images/photo_profil(2).png">
+                <img class="col rounded-circle" src="images/photo_profil.png">
                 <div class="col-1">
                     <!-- Column Spacer-->
                 </div>
@@ -80,7 +80,7 @@
         <h1 id="resume" style="font-size: 4vw;">Resume</h1>
         <img src="images/cv_preview.png" alt="resume preview"
             style="display: block; margin: auto; border-radius: 2vw; width: 25vw; height: auto;">
-        <a href="/cv_leo_poinet.pdf" style="display: flex; justify-content: center; align-items: center;">
+        <a href="/files/cv_poinet_leo.pdf" style="display: flex; justify-content: center; align-items: center;">
             Read in french as pdf >
         </a>
     </div>
