--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
     <link rel="shortcut icon" href="images/logo_lp_raw.png" type="image/x-icon">
     <title>Léo Poinet</title>
