🚀 porting to reactjs

--- a/index.html
+++ b/index.html
@@ -1,130 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/styles/style.css">
-
-    <link rel="shortcut icon" href="images/logo_lp_raw.png" type="image/x-icon">
-    <title>Léo Poinet</title>
-</head>
-
-<body style="position: relative;">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark page-padding navbar-custom py-1">
-        <a class="navbar-brand" href="/index.html">
-            <img src="images/logo_lp_raw.png" alt="leopnt logo" height="20">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact.html" style="color:white">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html" style="color:white">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/leopnt"><img src="icons/github.svg" alt="github icon"
-                            height="24"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://leopnt.itch.io"><img src="icons/itch-io.svg" alt="itch-io icon"
-                            height="24"></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <img src="images/bg_ibm.png" alt="ibm background"
-        style="position: absolute; z-index: -1; object-position: 0 -4.5vw;" width="100%">
-    <div class="main page-padding">
-        <div class="container p-0 m-0">
-            <div class="row align-items-center no-gutters">
-                <img class="col rounded-circle" src="images/photo_profil.png">
-                <div class="col-1">
-                    <!-- Column Spacer-->
-                </div>
-                <div class="col-8">
-                    <h1 class="row-sm text-left" style="font-size: 4vw;">
-                        Hi, I'm Leo
-                    </h1>
-                    <h2 class="row-sm text-center" style="font-size: 2.5vw;">
-                        IT Engineering Student
-                    </h2>
-                    <div class="row-sm text-right">
-                        <button type="button" class="btn btn-primary mb-2"
-                            onclick="document.getElementById('myworks').scrollIntoView();">My Works</button>
-                        <button type="button" class="btn btn-secondary mb-2"
-                            onclick="document.getElementById('resume').scrollIntoView();">Resume</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <img src="images/RetroCurves.png" alt="retro curves" width="100%">
-
-    <div id="resume" class="page-padding" style="margin-top: 2vw;">
-        <h1 id="resume" style="font-size: 4vw;">Resume</h1>
-        <img src="images/cv_preview.png" alt="resume preview"
-            style="display: block; margin: auto; border-radius: 2vw; width: 25vw; height: auto;">
-        <a href="/files/cv_poinet_leo.pdf" style="display: flex; justify-content: center; align-items: center;">
-            Read in french as pdf >
-        </a>
-    </div>
-
-    <div id="myworks" style="margin-top: 4vw; padding-bottom: 20vw;">
-        <img src="images/Blueprint.png" alt="blueprint background" style="position: absolute;" width="100%">
-        <img src="images/Retro_band.png" alt="retro bands background" style="position: absolute; margin-top: 12vw;"
-            width="100%">
-        <h1 class="page-padding" style="font-size: 4vw; position: absolute; margin-top: 16vw;">
-            My Works
-        </h1>
-        <div class="works-cards">
-            <a href="https://github.com/leopnt/Ciphatron"><img class="work-card" src="images/LeftProject.png"
-                    alt="work preview left" style="  left: 30%; transform: translate(-50%, 100%);" width="20%"></a>
-            <a href="https://leopnt.itch.io/"><img class="work-card" src="images/RightProject.png"
-                    alt="work preview right" style="  left: 70%; transform: translate(-50%, 100%);" width="20%"></a>
-            <a href="https://github.com/leopnt/NEFT"><img class="work-card" src="images/CenterProject.png"
-                    alt="work preview center" style="  left: 50%; transform: translate(-50%, 70%);" width="25%"></a>
-        </div>
-        <a href="https://github.com/leopnt">
-            <button type="button" class="btn btn-outline-light"
-                style="margin-left: 50%; margin-top: 75vw; transform: translate(-50%, -50%); width: 30vw;">More</button>
-        </a>
-    </div>
-
-    <div style="padding: 0; margin: 0;">
-        <footer class="page-padding" style="padding-bottom: 2vw; margin: 0;">
-            <hr style="padding: 0; margin: 0;">
-            <p style="text-align: left; color: gray; padding: 0; margin: 0; font-size: calc(10px + .5vw);">
-                Copyright (c) leopnt 2021. All rights reserved.
-            </p>
-        </footer>
-    </div>
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>leopnt</title><link href="/static/css/main.2803f606.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,l=t[0],p=t[1],f=t[2],c=0,s=[];c<l.length;c++)i=l[c],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in p)Object.prototype.hasOwnProperty.call(p,n)&&(e[n]=p[n]);for(a&&a(t);s.length;)s.shift()();return u.push.apply(u,f||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,l=1;l<r.length;l++){var p=r[l];0!==o[p]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/";var l=this["webpackJsonpleopnt.github.io"]=this["webpackJsonpleopnt.github.io"]||[],p=l.push.bind(l);l.push=t,l=l.slice();for(var f=0;f<l.length;f++)t(l[f]);var a=p;r()}([])</script><script src="/static/js/2.7380f4c4.chunk.js"></script><script src="/static/js/main.1215a3aa.chunk.js"></script></body></html>
