--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./src/styles.css">
         <title>Document</title>
 
-        <script src="../lib/utils.js"></script>
+        <script src="./lib/utils.js"></script>
     </head>
     <body>
         <div class="scene" id="scene">
@@ -69,9 +69,9 @@
 
 
                         <div class="external-links">
-                            <a href="https://linkedin.com/in/leopoinet"><img src="linkedin.png" alt="linkedin"></a>
-                            <a href="https://github.com/leopnt"><img src="github.png" alt="github"></a>
-                            <a href="https://leopnt.itch.io"><img src="itch.png" alt="itch.io"></a>
+                            <a href="https://linkedin.com/in/leopoinet"><img src="./src/linkedin.png" alt="linkedin"></a>
+                            <a href="https://github.com/leopnt"><img src="./src/github.png" alt="github"></a>
+                            <a href="https://leopnt.itch.io"><img src="./src/itch.png" alt="itch.io"></a>
                         </div>
                     </div>
                 </div>
@@ -146,6 +146,6 @@ void main() {
 }
         </script>
 
-        <script src="main.js"></script>
+        <script src="./src/main.js"></script>
     </body>
 </html>
