fix hint animation svg path

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="card__layer card__layer--middle" id="flip-button">
-                    <img id="flip-hint-anim" src="./hint-anim.svg" alt="click on page to flip">
+                    <img id="flip-hint-anim" src="./src/hint-anim.svg" alt="click on page to flip">
                     <canvas class="card__layer card__layer--middle" id="webgl-canvas">
                             Your browser doesn't seem to support WebGl
                     </canvas>
