update 'IT' term to 'computer science'

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="card__layer card__layer--back">
                     <div class="card__page card__page--back">
                         <p class="pitch">
-                            <em>Did you ever played LEGO™ ? So you just discovered my vision of IT:
+                            <em>Did you ever played LEGO™ ? So you just discovered my vision of computer science:
                                 simplify problems into elementary bricks and assemble them to find a creative solution. </em>
                         </p>
                         <br>
