--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <div class="card__page card__page--front">
                     <div class="header">
                         <a href="mailto:leopnt.dev@gmail.com">leopnt.dev@gmail.com</a>
-                        <p>Polytech - IdéSYS</p>
+                        <p>Polytech</p>
                     </div>
 
                     <div class="name-title">
                         <h1>Léo POINET</h1>
-                        <p>CS Student & CIO</p>
+                        <p>CS Student</p>
                     </div>
                     <div class="footer">
                         <p>Born in 2000 in Tours, France.</p>
@@ -55,7 +55,7 @@
                         rel="noopener noreferrer">
                         <h2>CHIP-8 Emulator</h2>
                         <hr>
-                        <p class="project-description">CHIP-8 Interpreter from scratch because it's fun</p>
+                        <p class="project-description">CHIP-8 Interpreter from scratch</p>
                     </a>
                     <a href="https://github.com/leopnt/hold-my-trade" class="project-link" target="_blank"
                         rel="noopener noreferrer">
