--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <div class="name-title">
                         <h1>Léo POINET</h1>
-                        <p>CS Student</p>
+                        <p>Computer Science Student</p>
                     </div>
                     <div class="footer">
                         <p>Born in 2000 in Tours, France.</p>
@@ -51,6 +51,12 @@
                     <p>Let's build together now !</p>
                     <br>
                     <h1>Latest works</h1>
+                    <a href="https://github.com/leopnt/auto_digger" class="project-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <h2>Auto Digger</h2>
+                        <hr>
+                        <p class="project-description">Automatic track digger using raw audio</p>
+                    </a>
                     <a href="https://github.com/leopnt/chip8-interpreter" class="project-link" target="_blank"
                         rel="noopener noreferrer">
                         <h2>CHIP-8 Emulator</h2>
@@ -64,15 +70,15 @@
                         <p class="project-description">Real time trading-like beer prices for Wall Street enthusiasts
                         </p>
                     </a>
-                    <a href="https://github.com/leopnt/blockblockcoin" class="project-link" target="_blank"
-                        rel="noopener noreferrer">
-                        <h2>BlockBlockCoin</h2>
-                        <hr>
-                        <p class="project-description">Blockchain system in C for learning purposes</p>
-                    </a>
 
                     <br>
                     <h1>Experience</h1>
+                    <a href="https://sncf.com" class="project-link" target="_blank" rel="noopener noreferrer">
+                        <h2>Software Engineer Intern at SNCF</h2>
+                        <hr>
+                        <p class="project-description">Data pipeline from micro-services to visualisation for
+                            faster and better decision making</p>
+                    </a>
                     <a href="https://blablacar.fr" class="project-link" target="_blank" rel="noopener noreferrer">
                         <h2>Software Engineer Intern at BlaBlaCar</h2>
                         <hr>
@@ -88,7 +94,7 @@
                 </div>
             </div>
             <div class="card__caption card__caption--bottom">
-                Copyright © leopnt 2022. All rights reserved.
+                Copyright © leopnt 2024. All rights reserved.
             </div>
             <div class="card__caption card__caption--side">
                 <em>Powered by WebGL</em>
