--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="footer">
                         <p>Born in 2000 in Tours, France.</p>
-                        <p>Currently in Nantes, France.</p>
+                        <p>Currently in Munich, Germany.</p>
                     </div>
                 </div>
             </div>
@@ -51,6 +51,13 @@
                     <p>Let's build together now !</p>
                     <br>
                     <h1>Latest works</h1>
+                    <a href="https://github.com/leopnt/bousse" class="project-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <h2>Bousse</h2>
+                        <hr>
+                        <p class="project-description">Lightweight DJ software with trackpad support
+                        </p>
+                    </a>
                     <a href="https://github.com/leopnt/auto_digger" class="project-link" target="_blank"
                         rel="noopener noreferrer">
                         <h2>Auto Digger</h2>
@@ -63,16 +70,15 @@
                         <hr>
                         <p class="project-description">CHIP-8 Interpreter from scratch</p>
                     </a>
-                    <a href="https://github.com/leopnt/hold-my-trade" class="project-link" target="_blank"
-                        rel="noopener noreferrer">
-                        <h2>Hold my trade</h2>
-                        <hr>
-                        <p class="project-description">Real time trading-like beer prices for Wall Street enthusiasts
-                        </p>
-                    </a>
 
                     <br>
                     <h1>Experience</h1>
+                    <a href="https://beckmancoulter.com" class="project-link" target="_blank" rel="noopener noreferrer">
+                        <h2>Software Engineer Intern at Beckman Coulter</h2>
+                        <hr>
+                        <p class="project-description">Using computer vision to
+                        quickly and accurately recognize sample tubes</p>
+                    </a>
                     <a href="https://sncf.com" class="project-link" target="_blank" rel="noopener noreferrer">
                         <h2>Software Engineer Intern at SNCF</h2>
                         <hr>
